--- a/src/resume/index.html
+++ b/src/resume/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <div>
                 <h1>About me</h1>
-                <div class="aboutme">I'm curious and I find stimulating studying new frameworks, programming languages and almost everything related to software development. I try to improve myself and my code to make it easy to read and pleasing to work with. I'm interessed in pretty much everything is tech-related.</div>
+                <div class="aboutme">I'm 31, and I've always been curious about technology in every form. Even today, I'm interested in pretty much everything that is tech-related. I find it stimulating to learn and challenge myself; I always feel like I need to learn more and understand things better. In my free time, I love to walk with my dog and spend time with my girlfriend. I also like going to the gym; it keeps me energized and reminds me that consistency and discipline are the keys to improvement.</div>
             </div>
             <div class="experience">
                 <h1>Work Experience</h1>
@@ -38,7 +38,7 @@
                     <tr>
                         <td colspan=2 class="description">
                             &raquo; I am currently engaged in refactoring the entire backend of Yuxme to make it more efficient and adaptable to different clients (prior to this the application was exclusively web-based). In addition to this, I am responsible for overseeing the development of the mobile app and acting as a facilitator between development teams and stakeholders.
-                            <br>&raquo; C# .NET 6 | Typescript Node.js | SQL Server | Elasticsearch | REST API | Microservices
+                            <br>&raquo; C# .NET 6 | Node.js (Typescript) | SQL Server | Elasticsearch | REST API | Microservices
                         </td>
                     </tr>
                 </table>
@@ -50,7 +50,7 @@
                     <tr>
                         <td colspan=2 class="description">
                             &raquo; I worked on various projects for different clients. Since Flowing had a flat organisational structure I had the opportunity to enhance my soft skills: it was essential to learn effective communication, negotiate requirements and self organise my own work.
-                            <br>&raquo; Typescript Node.js | PHP | MySql | MongoDB | REST API | Microservices | Docker
+                            <br>&raquo; Node.js (Typescript) | PHP | MySql | MongoDB | REST API | Microservices | Docker
                         </td>
                     </tr>
                 </table>
