--- a/src/resume/index.html
+++ b/src/resume/index.html
@@ -24,9 +24,9 @@
     <div class="ram"></div>
     <div class="wrapper">
         <div class="container">
-            <div>
+            <div class="aboutme">
                 <h1>About me</h1>
-                <div class="aboutme">I'm 31, and I've always been curious about technology in every form. Even today, I'm interested in pretty much everything that is tech-related. I find it stimulating to learn and challenge myself; I always feel like I need to learn more and understand things better. In my free time, I love to walk with my dog and spend time with my girlfriend. I also like going to the gym; it keeps me energized and reminds me that consistency and discipline are the keys to improvement.</div>
+                <div class="aboutme-text">I'm 31, and I've always been curious about technology in every form. Even today, I'm interested in pretty much everything that is tech-related. I find it stimulating to learn and challenge myself; I always feel like I need to learn more and understand things better. In my free time, I love to walk with my dog and spend time with my girlfriend. I also like going to the gym; it keeps me energized and reminds me that consistency and discipline are the keys to improvement.</div>
             </div>
             <div class="experience">
                 <h1>Work Experience</h1>
