--- a/src/resume/index.html
+++ b/src/resume/index.html
@@ -62,7 +62,7 @@
                     <tr>
                         <td colspan=2 class="description">
                             &raquo; During these years I worked developing, maintaining and refactoring the company's software. It was composed by several monoliths that we refactored with microservices and serverless functions. I've been part of several teams IT (mobile, web, retailer and production department).
-                            <br> &raquo; C# .NET | SQL Server | Microservices | Serverless | Docker
+                            <br> &raquo; C# .NET | SQL Server | Microservices | Serverless | Docker | RabbitMQ
                         </td>
                     </tr>
                 </table>
@@ -73,15 +73,15 @@
                 <table>
                     <tr>
                         <td class="title">Technologies</td>
-                        <td class="description">I have extensively used C# (ASP.NET, Entity Framework etc); I also have considerable experience with Node.js (Typescript).</td>
+                        <td class="description">I have extensively used C# (.NET 4.5.2, .NET Core 2.2, .NET 6, ASP.NET, Entity Framework, LinQ, NUnit, xUnit, Razor, Blazor); I also have considerable experience with Node.js (Typescript, Express, Next.js, Mongoose, Prisma). For some time I worked with PHP (Symfony, Doctrine, Twig), Java and Kotlin.</td>
                     </tr>
                     <tr>
-                        <td class="title"></td>
-                        <td class="description">For some time I worked with PHP, Java and Kotlin.</td>
+                        <td class="title">Databases</td>
+                        <td class="description">SQL Server, PostegreSQL, MySQL, MongoDB</td>
                     </tr>
                     <tr>
                         <td class="title">Software Engineering</td>
-                        <td class="description">Microservices, Serverless, Agile, CICD, Unit tests, DDD, Hexagonal architecture</td>
+                        <td class="description">Microservices, Serverless, Agile, CICD, Unit tests, DDD, Hexagonal architecture, git, Message queue</td>
                     </tr>
                     <tr>
                         <td class="title">Languages</td>
